# signalsmith-clap-cpp

./: CMakeLists.txt  Makefile  README.md
include/signalsmith-clap/: cpp.h  note-manager.h  params.h  storage.h
resources/example-keyboard/: keyboard.html
source/: plugins.cpp
source/example-audio-plugin/: example-audio-plugin.h
source/example-keyboard/: example-keyboard.h
source/example-note-plugin/: example-note-plugin.h
source/example-synth/: example-synth.h
